Print a summary with per package detail after proposing update
Depends-On: https://softwarefactory-project.io/r/18957
Change-Id: I752e71d0a3088f753d05804aa7e78b8c9b24db81

--- a/sfinfo.cabal
+++ b/sfinfo.cabal
@@ -25,6 +25,7 @@ common common-options
                      , time
                      , cryptonite
                      , simple-cmd
+                     , ansi-wl-pprint
                      -- Internal dep
                      , gerrit
                      , podman
