--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -1,24 +1,12 @@
 ---
 - project:
     name: software-factory/sfinfo
-    check: &jobs
+    check:
       jobs:
         - linters
-        - haskell-stack-test:
-            vars:
-              lts_version: lts-16.5
-            nodeset:
-              nodes:
-                - name: container
-                  label: pod-haskell-lts-16
-            required-projects:
-              - software-factory/gerrit-haskell
-        - hlint:
-            nodeset:
-              nodes:
-                - name: container
-                  label: pod-haskell-f32
-    gate: *jobs
+    gate:
+      jobs:
+        - linters
 
 - project:
     name: software-factory/software-factory
