sf: add purgelogs script
Change-Id: I7c282e9d59d16612cd5165382e250f60871e5de6

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -35,6 +35,10 @@ packages:
     source: internal
     spec: included
 
+  - name: software-factory/purgelogs
+    source: internal
+    spec: included
+
   - name: software-factory/cauth
     source: internal
     spec: included
