npm-rpm-publish: use authtype=ssl
Change-Id: If33dec39659f8ed229553488f9b95c3ed2659b24

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -50,6 +50,7 @@
     description: Publish sf rpm to koji
     run: playbooks/npm-rpmpublish.yaml
     vars:
+      koji_extra_args: "--authtype=ssl"
       rpmbuild_extra_vars: "%dist .el7"
       scratch_build: True
       target: sf-master-el7
