npm-rpm-build: align tarball name with simple-rpm-build role
Change-Id: I2bdfe1188f48f123ef632cab79153de1a253276c

--- a/playbooks/npm-rpmpublish.yaml
+++ b/playbooks/npm-rpmpublish.yaml
@@ -25,7 +25,7 @@
         chdir: "{{ project_dir }}"
 
     - name: Create tarball
-      command: tar czf HEAD.tar.gz dist/
+      command: tar czf HEAD.tgz dist/
       args:
         chdir: "{{ project_dir }}"
 
