npm-rpm-build: Fix vars name to set the macro
Change-Id: I2e05da69af69309a8e3927232127ddbae15f026c

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -51,7 +51,7 @@
     run: playbooks/npm-rpmpublish.yaml
     vars:
       koji_extra_args: "--authtype=ssl"
-      rpmbuild_extra_vars: "%dist .el7"
+      rpmbuild_extra_args: "%dist .el7"
       build_from_source: true
       scratch_build: true
       target: sf-master-el7
