Adding new helpers for npm package building
The patternfly-react-ui-deps-distgit will have similar package
workflow as sf-ui, but few few exceptions. Some steps
are not required to be done during the packaging of mentioned
project. For example, the yarn build command is done during zuul packaging,
and yarn dist is not used at all.

Change-Id: Iefe55d8b6688399933ae427fb139a02efe649b61

--- a/playbooks/npm-rpmpublish.yaml
+++ b/playbooks/npm-rpmpublish.yaml
@@ -8,6 +8,7 @@
     # Symlink does not work when npm link to parent file directory
     - name: Install node_modules
       command: "mv /usr/libexec/shake/node_modules {{ project_dir }}/node_modules"
+      when: use_shake
 
     - name: Run yarn install
       command: yarn install --no-lockfile --offline
@@ -18,11 +19,13 @@
       command: yarn build
       args:
         chdir: "{{ project_dir }}"
+      when: yarn_build
 
     - name: Run yarn dist
       command: yarn dist
       args:
         chdir: "{{ project_dir }}"
+      when: yarn_dist
 
     - name: Create tarball
       command: tar czf HEAD.tgz dist/
