Added params for yarn package install
The yarn lockfile and online installation is required
to build patternfly-react-ui-deps-distgit package.

Change-Id: I1ce9f4b41e89dbdb8fc58cbd548960a7e564bd0f

--- a/playbooks/npm-rpmpublish.yaml
+++ b/playbooks/npm-rpmpublish.yaml
@@ -11,7 +11,8 @@
       when: use_shake
 
     - name: Run yarn install
-      command: yarn install --no-lockfile --offline
+      command: |
+        yarn install {% if yarn_no_lockfile %} --no-lockfile {% endif %} {% if yarn_offline %} --offline {% endif %}
       args:
         chdir: "{{ project_dir }}"
 
