Ported patch for creating tarball in npm-rpmbuilding
Some part of the code from patchset [1] is also required here.

[1] https://softwarefactory-project.io/r/#/c/20913/

Change-Id: I05fdf331b847984275735d01c5ef3c04e2a897d3

--- a/playbooks/npm-rpmpublish.yaml
+++ b/playbooks/npm-rpmpublish.yaml
@@ -29,7 +29,8 @@
       when: yarn_dist
 
     - name: Create tarball
-      command: tar czf HEAD.tgz dist/
+      command: |
+        tar czf ~/rpmbuild/SOURCES/{% if yarn_dist %}dist.tar.gz{% else %}HEAD.tgz{% endif %} {% if yarn_dist %} dist/ {% else %} node_modules/ {% endif %}
       args:
         chdir: "{{ project_dir }}"
 
