Replace old nodeset with the new one
This change removes the legacy centos-oci label.

Change-Id: I5ffa090ba6ee8e7c79417caf77646df1e3806c06

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -101,7 +101,7 @@
     nodeset:
       nodes:
         - name: publish-host
-          label: centos-oci
+          label: zuul-worker-fedora
 
 - job:
     name: sf-docs-build
