--- a/playbooks/rpmbuildpublish.yaml
+++ b/playbooks/rpmbuildpublish.yaml
@@ -1,8 +1,6 @@
 ---
 - hosts: all
   vars:
-    # Set projects_args to a list of "--project project_name"
-    projects_args: "{% for item in zuul['items'] %}--project {{ item.project.name }} {% endfor %}"
     # Get sfinfo location
     sfinfo_path_query: "[?name=='software-factory/sfinfo'].src_dir"
     sfinfo_path: "{{ (zuul.projects.values() | list | json_query(sfinfo_path_query))[0] }}"
@@ -17,7 +15,7 @@
       command: >
         ./software-factory/sfinfo/zuul_rpm_build.py \
             --distro-info ./software-factory/sfinfo/sf-{{ zuul.branch }}.yaml \
-            --project {{ zuul.project.name }}
+            --project {{ zuul.project.name }}:{{ zuul.branch }}:{{ zuul.tag|default('HEAD') }}
       args:
         chdir: "{{ sfnamespace_path }}"
 
