rpmpublish: use the correct branch variable
This change fixes a typo in the rpmpublish task.

Change-Id: Iac3998a80b7520321453e39a9cc6c3a8f1211360

--- a/playbooks/rpmpublish.yaml
+++ b/playbooks/rpmpublish.yaml
@@ -52,7 +52,7 @@
             ./software-factory/sfinfo/zuul_rpm_build.py --distro-info \
                 ./software-factory/sfinfo/sf-{{ _branch_name.stdout_lines[-1] }}.yaml \
                 --zuulv3 --srpm \
-                --project {{ zuul.project.name }}:{{ zuul.branch }}:{{ zuul.tag|default('HEAD') }}
+                --project {{ zuul.project.name }}:{{ _branch_name.stdout_lines[-1] }}:{{ zuul.tag|default('HEAD') }}
           args:
             chdir: "{{ sfnamespace_path }}"
 
