Increase timeout for builds
Ensure we don't hit a timeout if a package needs time to build.

Change-Id: Ibd2243c545e6418ce0f9111101b7142dbb21accb

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -4,6 +4,7 @@
     description: Build sf rpm
     pre-run: playbooks/install_requirements.yaml
     run: playbooks/rpmbuild.yaml
+    timeout: 3600
     required-projects:
       - software-factory/sfinfo
     nodeset:
