Add missing required project for pnpm-rpm-publish
Change-Id: Ieaded32ce5a5cf752f8743d9f3fb7bfafa9b93ae

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -56,6 +56,8 @@
       rpmbuild_extra_args: "-D \"%dist .el7\""
       build_from_source: true
       scratch_build: true
+    required-projects:
+      - software-factory/res-remoteapi
     roles:
       - zuul: zuul-distro-jobs
     secrets:
