sf-3.6: update final package list
Change-Id: I831d717729bfcef0ed15ea8f5e7da13d2515030f

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -195,7 +195,7 @@ packages:
     source: external
 
   # Epel import
-  - name: software-factory/acme-tiny
+  - name: rpms/acme-tiny
     source: external
   - name: software-factory/uthash
     source: external
