--- a/playbooks/pnpm-rpmpublish.yaml
+++ b/playbooks/pnpm-rpmpublish.yaml
@@ -2,6 +2,12 @@
   vars:
     project_dir: "{{ zuul.project.src_dir }}/"
   tasks:
+    - name: Ensure the tag version is in the spec
+      command: "sed -e 's/Version:.*/Version: {{ zuul.tag }}/ -i {{ zuul.project.short_name }}.spec"
+      args:
+        chdir: "{{ project_dir }}"
+      when: zuul.tag is defined
+
     - name: Run pnpm install "{{ pnpm_install | default ('') }}"
       command: "pnpm install {{ pnpm_install }}"
       args:
