Fix typo in pnpm-rpmpublish
Change-Id: I9f58b68f568b600511b25ae625ee5e08a86b3cc6

--- a/playbooks/pnpm-rpmpublish.yaml
+++ b/playbooks/pnpm-rpmpublish.yaml
@@ -3,7 +3,7 @@
     project_dir: "{{ zuul.project.src_dir }}/"
   tasks:
     - name: Ensure the tag version is in the spec
-      command: "sed -e 's/Version:.*/Version: {{ zuul.tag }}/ -i {{ zuul.project.short_name }}.spec"
+      command: "sed -e 's/Version:.*/Version: {{ zuul.tag }}/' -i {{ zuul.project.short_name }}.spec"
       args:
         chdir: "{{ project_dir }}"
       when: zuul.tag is defined
