--- a/sf-3.6.yaml
+++ b/sf-3.6.yaml
@@ -140,6 +140,9 @@ packages:
   - name: rpms/gerrit
     source: external
 
+  - name: software-factory/zuul-results-gerrit-plugin
+    source: external
+
   - name: software-factory/gitweb-theme-kogakure
     source: external
 
