Add missing ib3 package to the 3.6 release
Change-Id: I3d2f5d5688d6a7c34d96105954e3910ff5b515c3

--- a/sf-3.6.yaml
+++ b/sf-3.6.yaml
@@ -284,6 +284,8 @@ packages:
     source: external
   - name: rpms/python-urllib3
     source: external
+  - name: rpms/python-ib3
+    source: external
   - name: rpms/python-requests
     source: external
   - name: rpms/python-sphinx-theme-alabaster
