Enable CI tests for python-zmq-distgit
Change-Id: Id9d0ee1848974d0f83356a0d692cfdf5d9d56ea7

--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -53,7 +53,7 @@
 - project:
     name: software-factory/python-zmq-distgit
     templates:
-      - sf-ci-no-jobs
+      - sf-ci-jobs-light
 
 - project:
     name: software-factory/re2-distgit
