use linters-pod for linters jobs
Change-Id: I6d21b841c66e9a550512747afaefc451f4164dc8

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -37,7 +37,7 @@
     check:
       jobs:
         - linters:
-            nodeset: fedora-latest-pod
+            nodeset: linters-pod
     experimental:
       jobs:
         - sf-rpm-build
