Remove EOL Fedora nodesets
Those nodesets uses Fedora distro, which is End of Life and
should not be in use anymore.

Change-Id: I6d558eb9b6ba867bb18dc83306f3abcda7ea2f17

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -124,7 +124,7 @@
     nodeset:
       nodes:
         - name: publish-host
-          label: zuul-worker-fedora
+          label: zuul-worker-f37
 
 - job:
     name: sf-docs-build
@@ -134,4 +134,4 @@
     nodeset:
       nodes:
         - name: container
-          label: pod-python-f32
+          label: zuul-worker-f37
