Install requirements.txt when it's available
After changing base image for the sf-docs-build, the sphinx package
is not available in the container image, so the docs can not be
generated.

This commit fixes CI issue raised in [1].

[1] https://softwarefactory-project.io/r/c/software-factory/sf-docs/+/29188

Change-Id: Ic259125d4a5b5f7839ec849290ca0b3b9cfea08d

--- a/playbooks/sfdocbuild.yaml
+++ b/playbooks/sfdocbuild.yaml
@@ -1,7 +1,20 @@
 ---
 - hosts: all
   tasks:
-    - name: "Run sphinx-build"
-      command: sphinx-build -W -b html -d build/doctrees docs/ {{ ansible_user_dir }}/zuul-output/logs/docs-html/
+    - name: Check if project contains requirements.txt file
+      ansible.builtin.stat:
+        path: "{{ zuul.project.src_dir }}/requirements.txt"
+      register: _python_requirements
+
+    - name: Install Python requirements related to project
+      become: true
+      ansible.builtin.pip:
+        requirements: "{{ zuul.project.src_dir }}/requirements.txt"
+      when: _python_requirements.stat.exists
+
+    - name: Run sphinx-build
+      ansible.builtin.command: >
+        sphinx-build -W -b html
+        -d build/doctrees docs/ {{ ansible_user_dir }}/zuul-output/logs/docs-html/
       args:
         chdir: "{{ zuul.project.src_dir }}"
